# api-roletas

./: .gitignore  Makefile  coda_comigo.md  config.env  mkdocs.yml  pyproject.toml  spec.md
code/: main.py  raspar_e_tratar_dados_da_bet.py
docs/: index.md
docs/steps/: 1°_Raspar_e_tratar_dados_da_bet.md
tests/: conftest.py  test_browser_e_raspagens.py  test_chrome.py
